--- a/public/index.html
+++ b/public/index.html
@@ -50,46 +50,81 @@
   </head>
   <body>
     <header>
-      <div class="navbar navbar-dark bg-dark shadow-sm">
-        <div class="container d-flex justify-content-between">
-          <a href="#" class="navbar-brand d-flex align-items-center">
-            <strong>EMSoft API Documentation</strong>
-          </a>
+      <section class="jumbotron text-center">
+        <div class="container">
+          <h1>EMSoft API Documentation</h1>
         </div>
-      </div>
+      </section>
     </header>
 
     <main role="main">
-      <section class="jumbotron text-center">
-        <div class="container">
-          <h1>API Documentation</h1>
-        </div>
-      </section>
-
       <div class="album py-5 bg-light">
         <div class="container">
           <div class="row">
-            <div class="col-md-3">
-              <div class="card shadow-sm">
-                <div class="card-body">
-                  <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
-                      Listings
-                    </li>
-                    <li class="list-group-item">Companies</li>
-                    <li class="list-group-item">Tags</li>
-                  </ul>
-                </div>
+            <div class="col-3">
+              <div
+                class="nav flex-column nav-pills"
+                id="v-pills-tab"
+                role="tablist"
+                aria-orientation="vertical"
+              >
+                <a
+                  class="nav-link active"
+                  id="v-pills-home-tab"
+                  data-toggle="pill"
+                  href="#v-pills-home"
+                  role="tab"
+                  aria-controls="v-pills-home"
+                  aria-selected="true"
+                  >Jobs</a
+                >
+                <a
+                  class="nav-link"
+                  id="v-pills-profile-tab"
+                  data-toggle="pill"
+                  href="#v-pills-profile"
+                  role="tab"
+                  aria-controls="v-pills-profile"
+                  aria-selected="false"
+                  >Companies</a
+                >
+                <a
+                  class="nav-link"
+                  id="v-pills-messages-tab"
+                  data-toggle="pill"
+                  href="#v-pills-messages"
+                  role="tab"
+                  aria-controls="v-pills-messages"
+                  aria-selected="false"
+                  >Tags</a
+                >
               </div>
             </div>
-            <div class="col-md-9">
-              <div class="card mb-4 shadow-sm">
-                <div class="card-body">
-                  <p class="card-text">
-                    This is a wider card with supporting text below as a natural
-                    lead-in to additional content. This content is a little bit
-                    longer.
-                  </p>
+            <div class="col-9">
+              <div class="tab-content" id="v-pills-tabContent">
+                <div
+                  class="tab-pane fade show active"
+                  id="v-pills-home"
+                  role="tabpanel"
+                  aria-labelledby="v-pills-home-tab"
+                >
+                  Jobs
+                </div>
+                <div
+                  class="tab-pane fade"
+                  id="v-pills-profile"
+                  role="tabpanel"
+                  aria-labelledby="v-pills-profile-tab"
+                >
+                  Companies
+                </div>
+                <div
+                  class="tab-pane fade"
+                  id="v-pills-messages"
+                  role="tabpanel"
+                  aria-labelledby="v-pills-messages-tab"
+                >
+                  Tags
                 </div>
               </div>
             </div>
